--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block title %}Register{% endblock title %}
+{% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +19,7 @@
         <div class="mb-3">
             <p>Full Name</p>
             <input type="text" name="firstname" class="form-control-1" id="exampleInputName">
-                    
+            
         </div>
         <div class="mb-3">
             <p>Last Name</p>
@@ -40,3 +45,4 @@
 <!-- JavaScript Bundle with Popper -->
 
 </html>
+{% endblock content %}
