--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block title %}login{% endblock title %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -64,3 +69,4 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </html>
+{% endblock content %}
