--- a/templates/personal_info.html
+++ b/templates/personal_info.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block title %}login{% endblock title %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,3 +42,4 @@ oninput="weightConverter(this.value)" onchange="weightConverter(this.value)">
 
 </body>
 </html>
+{% endblock content %}
