--- a/templates/power.html
+++ b/templates/power.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block title %}login{% endblock title %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,3 +39,5 @@
 
 </body>
 </html>
+{% endblock content %}
+
