--- a/templates/sport.html
+++ b/templates/sport.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block title %}login{% endblock title %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,3 +37,4 @@
     
 </body>
 </html>
+{% endblock content %}
