--- a/static/css/power.css
+++ b/static/css/power.css
@@ -1,20 +1,15 @@
 body {
     background-color: rgb(196, 192, 192);
 }
-.container {
+.main-div{
     margin-top: 30%;
+
+}
+.container {
+    
     display: flex;
     justify-content: space-around;
 }
-h1 {
-    text-align: center;
-}
-.rn {
-    margin-top: 20%;
-    margin-right: 20%;
-    float: right;
-}
-
 img {
     height: 150px;
     width: 150px;
@@ -22,11 +17,10 @@ img {
 .btn {
     display: inline-block;
     margin-top: 200px;
-    margin-left: 50px;
+    margin-left: 150px;
     color: aliceblue;
     width: 200px;
     padding: 10px;
-    margin-top: 150px;
     border-radius: 10px;
     background-color: rgb(0, 157, 255);
     border-color: rgb(0, 157, 255);
