--- a/static/css/sport.css
+++ b/static/css/sport.css
@@ -2,18 +2,28 @@ body {
     background-color: rgb(196, 192, 192);
 }
 .container {
-    margin-top: 30%;
+    
     display: flex;
     justify-content: space-around;
 }
+.flex-div{
+    margin-top: 30%;
+}
+h1 {
+    text-align: center;
+}
+
+
+
 img {
-    height: 150px;
-    width: 150px;
+    height: 155px;
+    width: 155px;
+    box-shadow: 0 0 3px 3px gray;
 }
 .btn {
     display: inline-block;
     margin-top: 200px;
-    margin-left: 50px;
+    margin-left: 150px;
     color: aliceblue;
     width: 200px;
     padding: 10px;
