--- a/templates/location.html
+++ b/templates/location.html
@@ -1,8 +1,6 @@
-{% extends 'base.html' %}
-
-{% block title %}login{% endblock title %}
 
 {% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="location.css">
-    <title>Location</title>
+    {% load static %}<link rel="stylesheet" href="{% static 'css/location.css' %}">
+    {% block title %}Location{% endblock title %}
+    
 </head>
 <body>
+    
     <h3>Address</h3>
     <form>
         <div class="mb-4 pb-2">
@@ -88,4 +88,4 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </html>
-% endblock content %}
+{% endblock content %}
