--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}login{% endblock title %}
 
 {% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,13 +11,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-<link rel="stylesheet" href="login.css">
+{% load static %}<link rel="stylesheet" href="{% static 'css/login.css' %}">
 
 <span class="W" style="color: yellow;">W</span>
 <span class="O" style="color: blue;">O</span>
 <span class="D" style="color: red;">D</span>
-    <title>Login</title>
+<title>login</title>
 </head>
+<body>
+
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -63,7 +65,7 @@
         </div>
     </div>
 </section>
-<body>
+
     
 </body>
 <!-- JavaScript Bundle with Popper -->
