--- a/templates/personal_info.html
+++ b/templates/personal_info.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}login{% endblock title %}
+
 
 {% block content %}
 <!DOCTYPE html>
@@ -9,10 +9,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="personal_info.css">
-    <title>Personal info</title>
+    {% load static %}<link rel="stylesheet" href="{% static 'css/personal_info.css' %}">
+    {% block title %}Personal Info{% endblock title %}
 </head>
 <body>
+    
     <input class="date" name="DOB" type="date">
 
     <div class="mb-4 pb-2">
