--- a/templates/run.html
+++ b/templates/run.html
@@ -1,4 +1,6 @@
-{% load static %}
+{% extends 'base.html' %}
+
+
 
 {% block content %}
 <!DOCTYPE html>
@@ -8,30 +10,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}<link rel="stylesheet" href="{% static 'css/power.css' %}">
-    {% block title %}Power{% endblock title %}
+    {% block title %}Run{% endblock title %}
 </head>
 <body>
     
-    <h1>Powerlifting Programs</h1>
+    <h1>Running Programs</h1>
 
-    <div class="main-div">
-        <div class="container">
+    <div>
         <h3>Beginner</h3>
         <h3>Intermediate</h3>
         <h3>Advance</h3>
-        </div>
     <div class="container">
-        
         <button type="submit" name="learn" value="myimage">
-            <img src="{% static 'img/25lbs.jpg' %}">
+            <img src=img/25lbs.jpg alt="sport">
         </button>
 
         <button type="submit" name="learn" value="myimage">
-            <img src="{% static 'img/35lbs.jpg' %}">
+            <img src=img/35lbs.jpg alt="sport">
         </button>
 
         <button type="submit" name="learn" value="myimage">
-            <img src="{% static 'img/45lbs.jpg' %}">
+            <img src=img/45lbs.jpeg alt="sport">
         </button>
     </div>
 
