--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,56 +1,74 @@
+    {% load static %}
 
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script
+        src="https://kit.fontawesome.com/3865fe1c3d.js"
+        crossorigin="anonymous"
+        ></script>
+        <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="main">
+        <header>
+            <div class="navigation">
+            <div class="WODlogo">
+                
+                <a href="/"><h3><i style="color: red;">W</i><i style="color: yellow;">O</i><i style="color:blue ;">D</i></h3></a>
+            </div>
 
-{% load static %}
+            <div class="search_bar">
+                <input type="text" placeholder="search" />
+                <a class="search_bar" href=""><i class="fas fa-search"></i></a>
+            </div>
 
-{% block content %}
+            <div class="contacts_icons">
+                <button class="program">Programs</button>
+                <button class="stats">Stats</button>
+                
+            </div>
+            </div>
+        </header>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-
-
-<article class="media">
-
-    <div>
-        <figure>
-            <img src="" alt="">
-        </figure>
-    </div>
-
-        <div class="media-content">
-
-        <div class="content">
-            <h1 style="font-weight: bold;" class="title is-1"></h1>
-            <h2 class="subtitle is-3">lara Code</h2>
-
-            <div class="media-right">
-                <button class="buttion is-success">Follow</button>
+        {% block content %} {% endblock content %}
+    
+        <div class="profile"><img src="{% static 'img/profile.png' %}" /></div>
+        <div class="detail">
+            <div class="post">
+            <h2>0</h2>
+            <p>Post</p>
+            </div>
+            <div class="followers">
+            <h2>0</h2>
+            <p>Followers</p>
+            </div>
+            <div class="following">
+            <h2>0</h2>
+            <p>Following</p>
             </div>
         </div>
-    </div>
-
-    <nav class="level is-mobile">
-        <div class="level-item has-text-centered">
-            <div>
-                <p class="heading">likes</p>
-                <p class="title"></p>
+        <br />
+        <div class="info">
+            <div class="name">
+            <h3>Bret Patterson</h3>
+            </div>
+            <div class="service">
+            <h3>Product/Sercice</h3>
+            </div>
+            <div class="work">
+            <h3>Programmer</h3>
+            </div>
+            <br />
+            <div class="button">
+            <div class="edit"><button>Edit Profile</button></div>
+            
             </div>
         </div>
-        <div class="level-item">
-
         </div>
-    </nav>
-
-    <p class="subtitles is-5">Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Facere, accusamus?</p>
-</article>
-{% endblock content %}
-
-</body>
-</html>
+    </body>
+    </html>
