--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -126,7 +126,7 @@ h3{
 .info{
     margin-right: 50px;
     margin-top: 250px;
-    width: 400px
+    width: 500px
     
 }
 .name {
@@ -166,4 +166,27 @@ h3{
     color: black;
     font-weight: bold;
     margin: 0px 8px;
+}
+body {
+    font-family: "Roboto", sans-serif;
+    font-size: 17px;
+    background-color: #fdfdfd;
+}
+.shadow {
+    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
+}
+.btn-danger {
+    color: #fff;
+    background-color: #f00000;
+    border-color: #dc281e;
+}
+.masthead {
+    background: #3398E1;
+    height: auto;
+    padding-bottom: 15px;
+    box-shadow: 0 16px 48px #E3E7EB;
+    padding-top: 10px;
+}
+.card{
+    box-shadow: 0 16px 48px #E3E7EB;
 }
