--- a/templates/location.html
+++ b/templates/location.html
@@ -72,11 +72,9 @@
         </div>
 
     
-        <button type="button" class="btn btn-light btn-lg"
-            data-mdb-ripple-color="dark">Back</button>
+        <button type="button" class="btn btn-primary" onclick= "location.href='../register/';">Back</button>
 
-        <button type="button" class="btn btn-light btn-lg"
-            data-mdb-ripple-color="dark">Next</button>
+        <button type="button" class="btn btn-primary" onclick= "location.href='../sport/';">Next</button>
 
 
             </div>
