--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,12 +5,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="google" content="notranslate" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script
         src="https://kit.fontawesome.com/3865fe1c3d.js"
         crossorigin="anonymous"
         ></script>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous" />
         <title>Document</title>
     </head>
     <body>
@@ -28,7 +32,7 @@
             </div>
 
             <div class="contacts_icons">
-                <button class="program">Programs</button>
+                <button class="program" onclick="location.href='../power/';">Programs</button>
                 <button class="stats">Stats</button>
                 
             </div>
@@ -70,5 +74,47 @@
             </div>
         </div>
         </div>
+        
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'posts_list' %}">Django central</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item text-black">
+                            <a class="nav-link text-black font-weight-bold" href="#">About</a>
+                        </li>
+                        <li class="nav-item text-black">
+                            <a class="nav-link text-black font-weight-bold" href="#">Policy</a>
+                        </li>
+                        <li class="nav-item text-black">
+                            <a class="nav-link text-black font-weight-bold" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
+<div class="col-md-4 float-right ">
+    <div class="card my-4">
+            <h5 class="card-header">About Us</h5>
+        <div class="card-body">
+            <p class="card-text"> This awesome blog is made on the top of our Favourite full stack Framework 'Django', follow up the tutorial to learn how we made it..!</p>
+            <a href="https://djangocentral.com/building-a-blog-application-with-django"
+                class="btn btn-danger">Know more!</a>
+        </div>
+    </div>
+    </div>
+        <!-- Footer -->
+        <footer class="py-3 bg-grey">
+            <p class="m-0 text-dark text-center ">Copyright &copy; Django Central</p>
+        </footer>
+        {% block sidebar %}
+
+{% endblock sidebar %}
     </body>
     </html>
