--- a/templates/sport.html
+++ b/templates/sport.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+
 
 
 
@@ -23,19 +23,18 @@
         </div>
 
     <div class="container">
-        <button type="submit" name="learn" value="myimage">
+        <button type="button" value="myimage" onclick= "location.href='../power/';">
             <img src="{% static 'img/powerlifting.png' %}">
         </button>
 
-        <button type="submit" name="learn" value="myimage">
+        <button type="button"  value="myimage" onclick= "location.href='../run/';">
             <img src="{% static 'img/running.png' %}">
         </button>
     </div>
     </div>
 
-    <button type="submit" class="btn btn-primary">Back</button>
-    <button type="submit" class="btn btn-primary">Next</button>
-
+    <button type="button" class="btn btn-primary" onclick= "location.href='../location/';">Back</button>
+    <button type="button" class="btn btn-primary" onclick= "location.href='../Home/';">Next</button>
     
 </body>
 </html>
