--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,45 +1,49 @@
 body{
     background-color: rgb(194, 194, 194);
 }
+h2{
+    text-align: center;
+    color: aliceblue;
+}
 form{
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .form-control-1{
-width:500px;
-height: 40px;
-border-radius: 200px;
-box-sizing: content-box;
-border: 3px solid rgb(62, 0, 128)
+    width:500px;
+    height: 40px;
+    border-radius: 8px;
+    box-sizing: content-box;
+    border: 3px solid rgb(62, 0, 128)
 }
 .form-control-2 {
     width:500px;
     height: 40px;
-    border-radius: 200px;
+    border-radius: 8px;
     box-sizing: content-box;
     border: 3px solid purple
 }
 .form-control-3{
     width:500px;
     height: 40px;
-    border-radius: 200px;
+    border-radius: 8px;
     box-sizing: content-box;
     border: 3px solid red
 }
 .form-control-4{
     width:500px;
     height: 40px;
-    border-radius: 200px;
+    border-radius: 8px;
     box-sizing: content-box;
     border: 3px solid orange
 }
 .form-control-5{
     width:500px;
     height: 40px;
-    border-radius: 200px;
+    border-radius: 8px;
     box-sizing: content-box;
     border: 3px solid yellow
 }
