--- a/templates/personal_info.html
+++ b/templates/personal_info.html
@@ -2,6 +2,7 @@
 
 
 
+
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
@@ -10,10 +11,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}<link rel="stylesheet" href="{% static 'css/personal_info.css' %}">
-    {% block title %}Personal Info{% endblock title %}
+
 </head>
 <body>
     
+    <h3>Personal Information</h3>
     <input class="date" name="DOB" type="date">
 
     <div class="mb-4 pb-2">
