--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,46 +1,26 @@
-    {% load static %}
-
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="google" content="notranslate" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script
-        src="https://kit.fontawesome.com/3865fe1c3d.js"
-        crossorigin="anonymous"
-        ></script>
-        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-            crossorigin="anonymous" />
-        <title>Document</title>
-    </head>
-    <body>
-        <div class="main">
-        <header>
-            <div class="navigation">
-            <div class="WODlogo">
-                
-                <a href="/"><h3><i style="color: red;">W</i><i style="color: yellow;">O</i><i style="color:blue ;">D</i></h3></a>
-            </div>
-
-            <div class="search_bar">
-                <input type="text" placeholder="search" />
-                <a class="search_bar" href=""><i class="fas fa-search"></i></a>
-            </div>
-
-            <div class="contacts_icons">
-                <button class="program" onclick="location.href='../power/';">Programs</button>
-                <button class="stats">Stats</button>
-                
-            </div>
-            </div>
-        </header>
-
-        {% block content %} {% endblock content %}
     
+{% extends 'base.html' %}
+    {% load static %}
+    
+
+        {% block content %} 
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8" />
+            <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+            <meta name="google" content="notranslate" />
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <script
+            src="https://kit.fontawesome.com/3865fe1c3d.js"
+            crossorigin="anonymous"
+            ></script>
+            <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+            <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+                crossorigin="anonymous" />
+            <title>Document</title>
+        </head>
         <div class="profile"><img src="{% static 'img/profile.png' %}" /></div>
         <div class="detail">
             <div class="post">
@@ -78,7 +58,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'posts_list' %}">Django central</a>
+                <a class="navbar-brand">Django central</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -109,12 +89,7 @@
         </div>
     </div>
     </div>
-        <!-- Footer -->
-        <footer class="py-3 bg-grey">
-            <p class="m-0 text-dark text-center ">Copyright &copy; Django Central</p>
-        </footer>
-        {% block sidebar %}
-
-{% endblock sidebar %}
+    
     </body>
     </html>
+    {% endblock content %}
