--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,7 @@
 
 
 
+
 {% block content %}
 
 <!DOCTYPE html>
@@ -17,25 +18,26 @@
 <body>
     
     <form>
+        <h2>Register</h2>
         <div class="mb-3">
-            <p>Full Name</p>
+            <p style="color:white ;">Full Name</p>
             <input type="text" name="firstname" class="form-control-1" id="exampleInputName">
             
         </div>
         <div class="mb-3">
-            <p>Last Name</p>
+            <p style="color:white ;">Last Name</p>
             <input type="text" name="lastname" class="form-control-2" id="exampleInputName2">
             </div>
             <div class="mb-3">
-            <p>User Name</p>
+            <p style="color:white ;">User Name</p>
             <input type="text" name="username" class="form-control-3" id="exampleInputUserName">          
         </div>
             <div class="mb-3">
-            <p>Password</p>
+            <p style="color:white;">Password</p>
             <input type="password" class="form-control-4" id="exampleInputPassword1">          
         </div>
             <div class="mb-3">
-            <p>Confirm Password</p>
+            <p style="color:white ;">Confirm Password</p>
             <input type="password" class="form-control-5" id="exampleInputPassword2">          
         </div>
         </div>
