--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,13 @@
     {% load static %}
 
     <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8" />
+            <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+            <meta name="google" content="notranslate" />
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <script
             src="https://kit.fontawesome.com/3865fe1c3d.js"
             crossorigin="anonymous"
             ></script>
@@ -14,15 +15,14 @@
             <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
                 crossorigin="anonymous" />
-        <title>Document</title>
-    </head>
-    <body>
-        
+            <title>Document</title>
+        </head>
+        <body>
             <div class="main">
             <header>
                 <div class="navigation">
                 <div class="WODlogo">
-                    {{ user.username }}
+                    
                     <a href="/"><h3><i style="color: red;">W</i><i style="color: yellow;">O</i><i style="color:blue ;">D</i></h3></a>
                 </div>
 
@@ -38,11 +38,14 @@
                 </div>
                 </div>
             </header>
-        
     {% block content %}
-
-
     {% endblock content %}
-        
+    <!-- Footer -->
+    <footer class="py-3 bg-grey">
+        <p class="m-0 text-dark text-center "></p>
+    </footer>
+    {% block sidebar %}
+
+    {% endblock sidebar %}
     </body>
     </html>
