--- a/templates/register.html
+++ b/templates/register.html
@@ -20,24 +20,24 @@
     <form>
         <h2>Register</h2>
         <div class="mb-3">
-            <p style="color:white ;">Full Name</p>
+            <p style="color:rgb(62, 0, 128) ;">Full Name</p>
             <input type="text" name="firstname" class="form-control-1" id="exampleInputName">
             
         </div>
         <div class="mb-3">
-            <p style="color:white ;">Last Name</p>
+            <p style="color:purple ;">Last Name</p>
             <input type="text" name="lastname" class="form-control-2" id="exampleInputName2">
             </div>
             <div class="mb-3">
-            <p style="color:white ;">User Name</p>
+            <p style="color:red ;">User Name</p>
             <input type="text" name="username" class="form-control-3" id="exampleInputUserName">          
         </div>
             <div class="mb-3">
-            <p style="color:white;">Password</p>
+            <p style="color:orange;">Password</p>
             <input type="password" class="form-control-4" id="exampleInputPassword1">          
         </div>
             <div class="mb-3">
-            <p style="color:white ;">Confirm Password</p>
+            <p style="color:yellow ;">Confirm Password</p>
             <input type="password" class="form-control-5" id="exampleInputPassword2">          
         </div>
         </div>
