--- a/templates/sport.html
+++ b/templates/sport.html
@@ -7,36 +7,433 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    {% load static %}<link rel="stylesheet" href="{% static 'css/sport.css' %}">
-    {% block title %}{% endblock title %}
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	{% load static %}<link rel="stylesheet" href="{% static 'css/sport.css' %}">
+	<title>Document</title>
 </head>
 <body>
-    
-    <h1>Sport</h1>
 
-    <div class="flex-div">
-        <div class="container">
-        <h3>Powerlifting</h3>
-        <h3>Running</h3>
-        </div>
+	<h1>Sports</h1>
 
-    <div class="container">
-        <button type="button" value="myimage" onclick= "location.href='../power/';">
-            <img src="{% static 'img/powerlifting.png' %}">
-        </button>
 
-        <button type="button"  value="myimage" onclick= "location.href='../run/';">
-            <img src="{% static 'img/running.png' %}">
-        </button>
-    </div>
-    </div>
-
-    <button type="button" class="btn btn-primary" onclick= "location.href='../location/';">Back</button>
+	<div class="com-content-category-blog__items blog-items  columns-4">
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+			
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/pages/run/">
+	<img src="{% static 'img/running.png' %}" alt="The Olympian is a 28-day no-equipment fitness program designed to mimic the training of the Ancient Greeks and the famed Olympians." itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/pages/power/" itemprop="url" title="Total Burn">
+	<img src="{% static 'img/powerlifting.png' %}" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/ironheart-program.html" itemprop="url" title="IRONHEART">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/pathfinder-plus.html" itemprop="url" title="Pathfinder Plus">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/pathfinder.html" itemprop="url" title="Pathfinder">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/arms-of-steel-chair-edition.html" itemprop="url" title="Arms of Steel Chair Edition">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/arms-of-steel.html" itemprop="url" title="Arms Of Steel">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/1min-hiit.html" itemprop="url" title="1-Minute HIIT">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/runner-prime.html" itemprop="url" title="Runner Prime">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/reboot-program.html" itemprop="url" title="Reboot">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/square-one.html" itemprop="url" title="Square One">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/gauntlet-program.html" itemprop="url" title="The Gauntlet">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/fireheart-program.html" itemprop="url" title="Fireheart">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/30-days-more-of-yoga.html" itemprop="url" title="30 Days More of Yoga">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/high-gear.html" itemprop="url" title="High Gear">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/programs/ten-program.html" itemprop="url" title="TEN">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+		<div class="com-content-category-blog__item blog-item" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+		
+	<figure class="none item-image">
+	<a href="/spellbound.html" itemprop="url" title="Spellbound">
+	<img src="" itemprop="thumbnailUrl" width="500" height="500" loading="lazy">        </a>
+	</figure>
+	
+	<div class="item-content">
+	
+	
+	
+	
+	
+			
+	
+	
+			
+	
+	
+	</div>
+	</div>
+	</div>
+	<button type="button" class="btn btn-primary" onclick= "location.href='../location/';">Back</button>
     <button type="button" class="btn btn-primary" onclick= "location.href='../Home/';">Next</button>
-    
 </body>
 </html>
 {% endblock content %}
