--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,10 @@
 </head>
 <body>
 
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+    </form>
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -42,9 +46,9 @@
                     <label class="form-label" for="typePasswordX">Password</label>
                 </div>
 
-                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="{% url 'password_change' %}">Forgot password?</a></p>
 
-                <button class="btn btn-outline-light btn-lg px-5" type="submit" onclick="location.href='../register/';">Login</button>
+                <button class="btn btn-outline-light btn-lg px-5" type="submit" onclick="location.href='../home/';">Login</button>
 
                 <div class="d-flex justify-content-center text-center mt-4 pt-1">
                     <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
@@ -55,7 +59,7 @@
             </div>
 
             <div>
-                <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+                <p class="mb-0">Don't have an account? <a href="{% url 'register' %}" class="text-white-50 fw-bold">Sign Up</a>
                 </p>
             </div>
 
