--- a/templates/base.html
+++ b/templates/base.html
@@ -32,8 +32,8 @@
                 </div>
 
                 <div class="contacts_icons">
-                    <button class="program" onclick="location.href='../power/';">Programs</button>
-                    <button class="stats">Stats</button>
+                    <button class="program" onclick="location.href='../sport/';">Programs</button>
+                    <button class="stats" onclick= "location.href='../log/';">Logs</button>
                     
                 </div>
                 </div>
