--- a/templates/power.html
+++ b/templates/power.html
@@ -24,7 +24,7 @@
         </div>
     <div class="container">
         
-        <button type="submit" name="learn" value="myimage">
+        <button type="submit" name="learn" value="myimage" onclick= "location.href='../programs/';">
             <img src="{% static 'img/25lbs.jpg' %}">
         </button>
 
