--- a/templates/profile.html
+++ b/templates/profile.html
@@ -42,7 +42,7 @@
             <h3>Bret Patterson</h3>
             </div>
             <div class="service">
-            <h3>Product/Sercice</h3>
+            <h3>Product/Service</h3>
             </div>
             <div class="work">
             <h3>Programmer</h3>
