--- a/templates/run.html
+++ b/templates/run.html
@@ -30,7 +30,7 @@
 
         <div class="container">
             
-            <button class="K" style="background-color:blue ;" type="submit" name="5K" value="myimage">
+            <button class="K" style="background-color:blue ;" type="submit" name="5K" value="myimage" onclick= "location.href='../5k_run/';">
                 <h1>5K</h1>
             </button>
     
