--- a/templates/sport.html
+++ b/templates/sport.html
@@ -433,7 +433,7 @@
 	</div>
 	</div>
 	<button type="button" class="btn btn-primary" onclick= "location.href='../location/';">Back</button>
-    <button type="button" class="btn btn-primary" onclick= "location.href='../Home/';">Next</button>
+    <button type="button" class="btn btn-primary" onclick= "location.href='../profile/';">Next</button>
 </body>
 </html>
 {% endblock content %}
